@@ -1,5 +1,11 @@
 2005-03-10  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Marshaller.cs : don't use g_utf8_strlen to determine the byte
+	count to be copied, it returns chars, not bytes.
+	* glib/glue/unichar.c : implement a quick and dirty strlen glue func.
+
+2005-03-10  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/Style.custom : add bg_pixmap accessors. remove IntPtr[] vars
 	and s/6/5 for array sizes.
 	* gtk/glue/style.c : add bg_pixmap field glue.
